--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,10 +8,10 @@
 {% block content %}
 
 <section class="section">
-  <div class="container intro ">
-      <div id="img-fond" class="img-fluid" > <!--image de fond --></div>
-      <div id="degrader" class="img-fluid"><!--dégrader --></div>
-      <img src="{{ url_for('static', filename='images/logo.svg') }}" alt="image du logo des jeux olympiques" class="logo logo-intro ">
+  <div class="container intro">
+      <div id="img-fond" > <!--image de fond --></div>
+      <div id="degrader"><!--dégrader --></div>
+      <img src="{{ url_for('static', filename='images/logo.svg') }}" alt="image du logo des jeux olympiques" class="logo logo-intro">
 
       <div class="bienvenue">
         <h1>Bienvenue sur la billetterie des Jeux-Olympiques</h1>
