--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<section class="form-section">
+<section class="form-section section-form-add">
      <h1>Modifier l'épreuve</h1>
 
     <div class="mb-3">
@@ -59,7 +59,7 @@
     </div>
     
 
-    <a href="{{ url_for('main.all_epreuve') }}" class="btn btn-outline-dark">Annuler</a>
+    <a href="{{ url_for('main.all_epreuve') }}" class="btn btn-outline-light">Annuler</a>
 </section>
    
 
