--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,10 +1,14 @@
+/*----------------------------------------------BASE-----------------------------------------------*/
 
 body {
   display: flex;
   flex-direction: column; 
 }
 
-
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Kameron', serif;
+    font-style: normal;
+}
 
       /*----------------------------------------------FOOTER-----------------------------------------------*/
 
