--- a/app/static/css/form.css
+++ b/app/static/css/form.css
@@ -1,14 +1,3 @@
-.form-section{
-    gap: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 50px;
-    
-    padding: 40px;
-
-}
-
 h1, h2 {
     text-align: center;
     font-family: 'Kameron', serif;
@@ -20,8 +9,33 @@ h4 {
     font-style: normal;
 }
 
+.form-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    width: 400px;
+    
+    margin: 0 auto;
+    margin-top: 40px;
+
+    border-radius: 10px;
+    background-color: rgb(0, 0, 117);
+    color: white;
+}
+
+.section-form-add{
+    width: 600px;
+    padding: 40px;
+
+    
+}
+
+.msg-form{
+    height: 150px;
+}
+
 .log-form{
-    height: auto;
     max-width: 350px;
     margin: 0 auto;
     color: white;
@@ -29,8 +43,16 @@ h4 {
 
 .form-container{
     width: 400px;
-    height: 400px;
-        margin: 0 auto;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 10px;
 
-    background-color: rgb(0, 0, 226);   
+    background-color: rgb(0, 0, 117);   
+}
+
+
+
+td, th, tr {
+    padding: 10px;
+    text-align: center;
 }
