--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -6,10 +6,10 @@
 
 {% block content %}
 
-<section class="form-section">
+<section class="form-section section-form-add">
     <h1>Nouvelle épreuve</h1>
 
-    <div class="mb-3">
+    <div class="mb-3 form-add">
         <form method="POST" enctype="multipart/form-data">
 
             {{ form.hidden_tag() }}
@@ -50,7 +50,7 @@
 
             <br>
 
-            {{ form.submit(class="form-control btn btn-success") }}
+            {{ form.submit(class="form-control btn btn-primary") }}
         </form>
     </div>
 </section>
