--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,7 +63,7 @@
           </ul>
 
                  <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary ms-auto" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        <button type="button" class="btn btn-danger ms-auto" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
           A LIRE AVANT DE VISITER LE SITE
         </button>
 
@@ -81,7 +81,7 @@
                 pour votre sécurité évitez de mettre des vraies coordonnées bancaires. Merci pour votre compréhension</p>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Compris</button>
+                <button type="button" class="btn btn-success" data-bs-dismiss="modal">Compris</button>
               </div>
             </div>
           </div>
