--- a/app/templates/epreuve.html
+++ b/app/templates/epreuve.html
@@ -67,7 +67,7 @@
           <div class="btn-group btn-group-lg" role="group" aria-label="Basic example" >
                 <a href="{{ url_for('main.update', epreuve_id=epreuve.id) }}" class="btn btn-info">Modifier</a>
 
-                <form action="{{ url_for('main.delete', epreuve_id=epreuve.id) }}" method="post" style="display:inline;" on-click="return confirm('Êtes-vous sûr de vouloir effectuer cette action ?');">
+                <form action="{{ url_for('main.delete', epreuve_id=epreuve.id) }}" method="post" style="display:inline;" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette épreuve ?');">
                     {{ form.hidden_tag() }}
                     {{ form.submit(class="btn btn-danger btn-lg") }}
                 </form>
