--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,7 +9,7 @@
         <h1>Connexion</h1>
 
     <div class="mb-3 form-container">
-        <form method="POST"  class="log-form">
+        <form method="POST" class="log-form">
 
             {{ form.hidden_tag() }}  <!-- Important pour CSRF -->
             {{ form.email.label }}
@@ -17,12 +17,12 @@
 
             {{ form.password.label }}
             {{ form.password(class="form-control") }}
-                <br>
-
-            {{ form.submit(class="form-control btn btn-success") }}
             <br>
 
-            <a href="{{ url_for('main.register') }}" class="form-control btn btn-info">Se créer un compte</a>
+            {{ form.submit(class="form-control btn btn-primary") }}
+            <br>
+            <br>
+            <a href="{{ url_for('main.register') }}" class="form-control btn btn-outline-warning">Se créer un compte</a>
         </form>
     </div>
 </section>
