--- a/app/templates/all_epreuve.html
+++ b/app/templates/all_epreuve.html
@@ -8,7 +8,7 @@
 
 <br>
 
-    <h1>Epreuves</h1>
+    <h1>Epreuves (coté administration)</h1>
 <br>
     <div class="d-grid gap-2 col-6 mx-auto">
     <a href="{{ url_for('main.add_epreuves') }}" class="btn btn-primary btn-lg">Ajouter une épreuve</a>
