--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 
-<body class="container my-4" style="    background-color: rgb(230, 230, 250);
-">
+<body class="container my-4" style="background-color: rgb(230, 230, 250);">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -101,7 +100,7 @@
     {% block content %}{% endblock %}
 
 <footer id="footer">
-    <div id="div-footer">
+    <div class="container" id="div-footer">
         <a href="/"><img src="{{ url_for('static', filename='images/logo.svg') }}" alt="Logo des jeux-olympiques" id="Logo-footer"></a>
         <p id="attention">ATTENTION: Ceci n'est pas le site officiel, ce n'est qu'un projet d'étude.
             Toute transaction ne sont que des simulations donc fausses,
@@ -111,7 +110,7 @@
 
 
 
-
+{% block js %}{% endblock %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
