--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -13,163 +13,86 @@ h1, h2, h3, h4, h5, h6 {
       /*----------------------------------------------FOOTER-----------------------------------------------*/
 
 #footer {
-    width: 1910px;
-    height: 700px;
+    width: 99.6vw;
+    height: 620px;
+    position: relative;
+
+    left: 50%;
+    right: 50%;
+
+    margin-left: -50vw;
+    margin-right: -50vw;
+
     background: #0900E0;
-
     display: flex;
-    flex-wrap: wrap;
-    
-
-    margin:200px 0 -24px -310px;
-
-}
-
-
-#div-footer{
-    width: 260px;
-    height: 206px;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
+    flex-direction: column;
 
     align-items: center;
     justify-content: center;
 
+    padding: 40px 0 20px 0;
+    box-sizing: border-box;
+    margin-top: 200px;
+    margin-bottom: -100px;
 }
 
-#div-footer a{
-    margin:100px auto;
+#div-footer {
+    width: 100%;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+#div-footer a {
+    margin: 0 auto 16px auto;
 }
 
 #attention {
-    font-family: 'Kameron';
+    font-family: 'Kameron', serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 26px;
-    line-height: 43px;
+    font-size: 22px;
+    line-height: 32px;
     text-decoration: underline;
-
-    margin: -60px auto;
+    margin: 8px auto 0 auto;
     color: #ffffff;
+    text-align: center;
 }
 
 
-
-@media (max-width: 1920px) {
-    #footer {
-        width: 1910px;
-        height: 700px;
-        
-        margin:200px 0 -24px -310px;
-        box-sizing: border-box;
-        left: 0;
-        right: auto;
-        position: relative;
-        justify-content: flex-start;
-    }
-
-    #div-footer {
-        width: 60%;
-        height: auto;
-        margin: 0 auto;
-
-        display: flex;
-        flex-direction: column;
-
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        
-        box-sizing: border-box;
-        padding: 10px;
-        
-    }
-
-    #attention {
-        font-size: 22px;
-        line-height: 32px;
-        margin: 20px 0 20px 20px;
-    }
-}
-
+/*----------------------------MEDIA QUERY ---------------------------------*/
 
 @media (max-width: 991px) {
     #footer {
-        width: 911px;
-        height: 700px;
-        margin: 200px 0 -24px -137px;
-
+        min-height: 180px;
+        padding: 24px 0 12px 0;
     }
-
     #div-footer {
-        width: 95%;
-        height: auto;
-        margin: 20px 0 20px 10px;
+        max-width: 95vw;
     }
-
     #attention {
-        font-size: 20px;
-        line-height: 30px;
-        margin: 20px 0 20px 10px;
+        font-size: 18px;
+        line-height: 26px;
     }
 }
 
-/* @media (max-width: 1920px) {
+@media (max-width: 600px) {
     #footer {
-        width: 1910px;
-        height: 700px;
-        
-        margin:200px 0 -24px -310px;
-        box-sizing: border-box;
-        left: 0;
-        right: auto;
-        position: relative;
-        justify-content: flex-start;
+        min-height: 140px;
+        padding: 16px 0 8px 0;
     }
-
     #div-footer {
-        width: 60%;
-        height: auto;
-        margin: 0 auto;
-
-        display: flex;
-        flex-direction: column;
-
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        
-        box-sizing: border-box;
-        padding: 10px;
-        
+        max-width: 100vw;
+        padding: 0 8px;
     }
-
     #attention {
-        font-size: 22px;
-        line-height: 32px;
-        margin: 20px 0 20px 20px;
+        font-size: 16px;
+        line-height: 22px;
     }
 }
 
-
-@media (max-width: 991px) {
-    #footer {
-        width: 911px;
-        height: 700px;
-        margin: 200px 0 -24px -137px;
-
-    }
-
-    #div-footer {
-        width: 95%;
-        height: auto;
-        margin: 20px 0 20px 10px;
-    }
-
-    #attention {
-        font-size: 20px;
-        line-height: 30px;
-        margin: 20px 0 20px 10px;
-    }
-} */
+ 
+ 
