responsive âge d'accueil fini

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,7 +38,7 @@
 </div>
   -->
 
-  <section class="section">
+  <section class="section section-card-epreuves">
       <div class="card text-bg-dark  card-epreuves">
         <img src="{{ url_for('static', filename='images/tedy.jpg') }}" class="card-img img-fluid" alt="Image de teddy riner.">
         <div class="card-img-overlay d-flex flex-column justify-content-center align-items-center content-epreuves">
