--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -3,6 +3,8 @@
 body {
   display: flex;
   flex-direction: column; 
+    overflow-x: hidden; /* Empêche le défilement horizontal */
+
 }
 
 h1, h2, h3, h4, h5, h6 {
