--- a/app/templates/paiement.html
+++ b/app/templates/paiement.html
@@ -129,26 +129,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-(() => {
-  'use strict';
-  const forms = document.querySelectorAll('.needs-validation');
-  Array.from(forms).forEach(form => {
-    form.addEventListener('submit', event => {
-      if (!form.checkValidity()) {
-        event.preventDefault();
-        event.stopPropagation();
-      }
-      form.classList.add('was-validated');
-    }, false);
-  });
-})();
-
-
-document.querySelector('.theme-toggle').addEventListener('click', () => {
-  document.body.classList.toggle('light-mode');
-});
-
-</script>
+<script src="{{ url_for('static', filename='js/fetch.js') }}"></script>
 </body>
 </html>
