--- a/app/templates/epreuve.html
+++ b/app/templates/epreuve.html
@@ -49,8 +49,8 @@
                                     <p  class="card-text">Prix : {{ offre.prix }} €</p>
                                     <p  class="card-text">Nombres de place restante : {{offre.bi_restant}}</p>
 
-                            <a href="{{ url_for('paiement.paiement_epreuve', type_offre=offre.type_offre) }}" class="btn btn-outline-primary">
-                                Acheter </a>           
+                            <!-- <a href="{{ url_for('paiement.paiement_epreuve', type_offre=offre.type_offre) }}" class="btn btn-outline-primary">
+                                Acheter </a>            -->
                 
                     </div>
                 </div>
