--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,7 +46,7 @@
 
 
   <br>
-  <section id="section-card-zone"></section>
+  <section class="section"id="section-card-zone"></section>
 
     <!-- <section class="section container-card section-infos">
 
