--- a/app/templates/all_epreuve.html
+++ b/app/templates/all_epreuve.html
@@ -14,7 +14,7 @@
     <a href="{{ url_for('main.add_epreuves') }}" class="btn btn-primary btn-lg">Ajouter une épreuve</a>
     </div>
 
-    <section class="section-epreuves">
+    <!-- <section class="section-epreuves">
  
         {% for epreuve in epreuves %}
 
@@ -36,6 +36,21 @@
             </div>
             
             {% endfor %}
-    </section>
+    </section> -->
 
+<div id="loader" class="text-center my-5">
+  <div class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Chargement...</span>
+  </div>
+</div>
+
+    <section class="section-epreuves" id="epreuves-card"></section>
+
+
+{% endblock %}
+
+
+
+{% block js %}
+    <script src="{{ url_for('static', filename='js/all_epreuves.js') }}"></script>
 {% endblock %}
