--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -89,6 +89,7 @@
       </div>
     </nav>
 
+    {% block Dashboard_header%} {% endblock %}
 
     {% with messages = get_flashed_messages() %}
       {% if messages %}
